--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,13 +2,13 @@ steps:
 
 ## multiline script
 - name: golang:1.20
-    entrypoint: /bin/bash
-    args: 
-      - -c
-      - |
-        GO_ENABLED=0 GOOS=linux go build webserver.go && go test -timeout 1m -v ./...
+  entrypoint: /bin/bash
+  args: 
+    - -c
+    - |
+      GO_ENABLED=0 GOOS=linux go build webserver.go && go test -timeout 1m -v ./...
 
-
+## build the image of webserver and push it in the same runtime image docker in docker to google container registry gcr.io 
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/gowebserver/webserver', '.']
 images: ['gcr.io/gowebserver/webserver']
