+      GO_ENABLED=0 GOOS=linux go build ${GO_PKG} && cp ${MAIN_PKG} /workspace/${MAIN_PKG}

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,8 +6,8 @@ steps:
   args: 
     - -c
     - |
-      export GO_PKG="webserver.go"
-      GO_ENABLED=0 GOOS=linux go build ${GO_PKG} && cp ${GO_PKG} /workspace/${GO_PKG} 
+      export MAIN_PKG="webserver.go"
+      GO_ENABLED=0 GOOS=linux go build ${GO_PKG} && cp ${MAIN_PKG} /workspace/${MAIN_PKG} 
 
 ## build the image of webserver and push it in the same runtime image docker in docker to google container registry gcr.io 
 - name: 'gcr.io/cloud-builders/docker'
