+      GO_ENABLED=0 GOOS=linux go build ${MAIN_PKG} && cp ${MAIN_PKG} /workspace/${MAIN_PKG}

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
     - -c
     - |
       export MAIN_PKG="webserver.go"
-      GO_ENABLED=0 GOOS=linux go build ${GO_PKG} && cp ${MAIN_PKG} /workspace/${MAIN_PKG} 
+      GO_ENABLED=0 GOOS=linux go build ${MAIN_PKG} && cp ${MAIN_PKG} /workspace/${MAIN_PKG} 
 
 ## build the image of webserver and push it in the same runtime image docker in docker to google container registry gcr.io 
 - name: 'gcr.io/cloud-builders/docker'
