--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,7 @@
 timeout: 1200s
-i#substitutions:
+substitutions:
+  _CUSTOM_REGION: us-central1
+  _CUSTOM_CLUSTER: gitlab-terraform-gke 
 
 steps:
 
@@ -25,15 +27,24 @@ images: ['gcr.io/gowebserver-1/webserver']
 #  - --location=location
 #  - --cluster=cluster
 
+- name: gcr.io/cloud-builders/kubectl
+  id: Configure kubectl
+  args:
+    - cluster-info
+  env:
+    - CLOUDSDK_COMPUTE_REGION=$_CUSTOM_REGION
+    - CLOUDSDK_CONTAINER_CLUSTER=$_CUSTOM_CLUSTER
+    - KUBECONFIG=/workspace/.kube/config
+
 - name: gcr.io/gowebserver-1/helm
   id: Deploy chart
   args:
     - upgrade
     - -i
-    - 
+    - webserver
     - ./webserverchart
     - -f
     - ./webserverchart/values.yaml
   env:
     - KUBECONFIG=/workspace/.kube/config
-      - TILLERLESS=true
+    - TILLERLESS=true
