--- a/webserverchart/values.yaml
+++ b/webserverchart/values.yaml
@@ -42,8 +42,8 @@ service:
 
 ingress:
   enabled: true
-  className: ""
-  annotations: {}
+  className: "webserver-ingress"
+  annotations: 
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "true"
   hosts:
