--- a/webserverchart/values.yaml
+++ b/webserverchart/values.yaml
@@ -44,15 +44,13 @@ ingress:
   enabled: true
   className: nginx
   annotations: 
-     kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-        - path: /headers
-          pathType: ImplementationSpecific
+    paths:
+      - path: /
+        pathType: ImplementationSpecific
+      - path: /headers/
+        pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
