--- a/webserverchart/values.yaml
+++ b/webserverchart/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: gcr.io/gowebserver-1/webserver
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
