--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,7 @@ steps:
   args: 
     - -c
     - |
-      env CGO_ENABLED=0 GOOS=linuxa GOARCH=amd64 go build webserver.go 
+      env CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build webserver.go 
 
 ## build the image of webserver and push it in the same runtime image docker in docker to google container registry gcr.io 
 - name: 'gcr.io/cloud-builders/docker'
