--- a/webserverchart/values.yaml
+++ b/webserverchart/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: gcr.io/gowebserver-1/webserver
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
