--- a/webserverchart/values.yaml
+++ b/webserverchart/values.yaml
@@ -38,7 +38,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8090
 
 ingress:
   enabled: true
@@ -48,7 +48,7 @@ ingress:
   hosts:
     - host: localhost
       paths:
-        - path: /
+        - path: /hello/
           pathType: ImplementationSpecific
         - path: /headers/
           pathType: ImplementationSpecific
