--- a/webserverchart/values.yaml
+++ b/webserverchart/values.yaml
@@ -37,7 +37,7 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
+  type: LoadBalancer
   port: 8090
 
 ingress:
@@ -45,6 +45,8 @@ ingress:
   className: nginx
   annotations: 
      kubernetes.io/tls-acme: "true"
+     # "gce" - external load balancer
+     kubernetes.io/ingress.class: "gce"
   hosts:
     - host: localhost
       paths:
